# elrond-voting

./: .gitignore  .managerc  README.md  manage.py
community-voting/: Cargo.toml  manage.py
community-voting/abi/: Cargo.toml
community-voting/abi/src/: main.rs
community-voting/mandos/: community-voting-init.scen.json  create-community-vote.scen.json
community-voting/mandos/create/: create-error-empty-choices.scen.json  create-error-empty-name.scen.json  create-error-invalid-deadline.scen.json  create-error-invalid-vote-limit.scen.json  create-error-vote-already-active.scen.json  create-success-limit-vote.scen.json  create-success.scen.json
community-voting/mandos/results/: final-results.scen.json  results-invalid-poll.scen.json  results-poll-still-running.scen.json
community-voting/mandos/status/: status-create-success.scen.json  status-poll-ended.scen.json  status-poll-invalid.scen.json
community-voting/mandos/vote/: vote-error-invalid-choice.scen.json  vote-error-invalid-poll.scen.json  vote-error-vote-twice.scen.json  vote-success.scen.json
community-voting/src/: lib.rs  poll_info.rs  status.rs
community-voting/tests/: mandos_test.rs
community-voting/wasm/: Cargo.toml
community-voting/wasm/src/: lib.rs
orchestrator/: Cargo.toml
orchestrator/abi/: Cargo.toml
orchestrator/abi/src/: main.rs
orchestrator/mandos/: orchestrator-init.scen.json
orchestrator/mandos/admin/: add-address.scen.json
orchestrator/src/: lib.rs
orchestrator/tests/: mandos_test.rs
orchestrator/wasm/: Cargo.toml
orchestrator/wasm/src/: lib.rs
