[package]
name = "orchestrator"
version = "0.0.1"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.community-voting]
path = "../community-voting"

[dependencies.elrond-wasm]
version = "0.10.3"

[dependencies.elrond-wasm-derive]
version = "0.10.3"

[dependencies.elrond-wasm-node]
version = "0.10.3"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.10.3"
