[package]
name = "orchestrator-abi"
version = "0.0.0"
authors = ["Anisia Iova <anisiai@yahoo.com>", "Razvan Stancioiu <stancioiu.razvan@gmail.com>", "Alexandru Cosmin Voicu"]
edition = "2018"
publish = false

[dependencies.orchestrator]
path = ".."

[dependencies.elrond-wasm]
version = "0.10.3"
path = "../../../../elrond-wasm"

[dependencies.elrond-wasm-debug]
version = "0.10.3"
path = "../../../../elrond-wasm-debug"
